fixed dark mode

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -939,6 +939,22 @@
   body.dark-mode #navigation #navbar-menu ul li .cs-drop-ul {
     background-color: var(--dark);
   }
+  body.dark-mode #navigation #navbar-menu ul .cs-services {
+    background-color: var(--dark);
+  }
+  body.dark-mode #navigation #navbar-menu ul .cs-tertiary-link {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #navigation #navbar-menu ul .cs-tertiary-ul {
+    background-color: var(--dark);
+  }
+  body.dark-mode #navigation #navbar-menu ul .cs-tertiary-link {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #navigation #navbar-menu ul .cs-tertiary-link:hover {
+    background-color: var(--medium);
+    cursor: pointer;
+  }
 }
 /*-- -------------------------- -->
 <---   Interior Page Header     -->
